force-app/main/default/objects/Activity/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <description>Crago del usuario asignado a la actividad</description>
    <formula>TEXT(Owner:User.Cargo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cargo</label>
    <type>Text</type>
</CustomField>