force-app/main/default/objects/Activity/fields/CentroResidencia__c.field-meta.xml
<CustomField>
    <fullName>CentroResidencia__c</fullName>
    <description>Centro o residencia al que pertenece el asignado de la tarea o evento. Se rellena mediante Flow</description>
    <label>Centro/ Residencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>