force-app/main/default/objects/Activity/fields/Duplicada__c.field-meta.xml
<CustomField>
    <fullName>Duplicada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de tipo check para saber si una actividad es duplicada</description>
    <label>Duplicada</label>
    <type>Checkbox</type>
</CustomField>