force-app/main/default/objects/Activity/fields/TiempoAbierto__c.field-meta.xml
<CustomField>
    <fullName>TiempoAbierto__c</fullName>
    <description>Campo de tipo fórmula texto que convierte la fecha de creación de la tarea a formato hora EST</description>
    <formula>TEXT(
				VALUE(
								    RIGHT(LEFT(TEXT(CreatedDate),FIND(&quot;:&quot;,Text(CreatedDate))-1),2)
				      )
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo abierto</label>
    <type>Text</type>
</CustomField>