force-app/main/default/objects/Activity/fields/TiempoAbiertoFormateado__c.field-meta.xml
<CustomField>
    <fullName>TiempoAbiertoFormateado__c</fullName>
    <description>Convierte la hora en formato militar y crea un rango para ese tiempo.</description>
    <formula>IF( 
     LEN( TiempoAbierto__c  ) = 1, 
          &apos;0&apos; + TiempoAbierto__c  + &apos;:00 - 0&apos; + TiempoAbierto__c  + &apos;:59&apos;,
          TiempoAbierto__c  + &apos;:00 - &apos; + TiempoAbierto__c  + &apos;:59&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo abierto formateado</label>
    <type>Text</type>
</CustomField>