force-app/main/default/objects/Activity/fields/UrgenciaPercibidaVisita__c.field-meta.xml
<CustomField>
    <fullName>UrgenciaPercibidaVisita__c</fullName>
    <label>Urgencia percibida visita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>